--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "short_name": "Twittor",
     "name": "Twittor para eroes",
-    "start_url": "index.url",
+    "start_url": "index.html",
     "background_color": "#3498db",
     "display": "standalone",
     "orientation": "portrait",
